--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,8 @@
     <script src="features/create/create.component.js"></script>
     <script src="features/join/join.component.js"></script>
     <script src="features/room/room.component.js"></script>
+    <script src="features/game/game.component.js"></script>
+
 
     <script src="scripts/controllers/gameController.js"></script>
     <script src="scripts/factories/usersFactory.js"></script>
