--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,11 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css">
     <!-- endbuild -->
     <base href="/">
   </head>
@@ -40,36 +40,36 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/firebase/firebase.js"></script>
-    <script src="bower_components/angularfire/dist/angularfire.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-aria/angular-aria.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.js"></script>
-    <script src="bower_components/angular-material/angular-material.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="bower_components/lodash/lodash.js"></script>
+    <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/firebase/firebase.js"></script>
+    <script src="/bower_components/angularfire/dist/angularfire.js"></script>
+    <script src="/bower_components/angular-animate/angular-animate.js"></script>
+    <script src="/bower_components/angular-aria/angular-aria.js"></script>
+    <script src="/bower_components/angular-messages/angular-messages.js"></script>
+    <script src="/bower_components/angular-material/angular-material.js"></script>
+    <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/bower_components/lodash/lodash.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/angularfire/config.js"></script>
-    <script src="scripts/angularfire/firebase.ref.js"></script>
-    <script src="scripts/controllers/chat.js"></script>
-    <script src="scripts/angularfire/auth.js"></script>
-    <script src="config/constants.js"></script>
+    <script src="/scripts/app.js"></script>
+    <script src="/scripts/angularfire/config.js"></script>
+    <script src="/scripts/angularfire/firebase.ref.js"></script>
+    <script src="/scripts/controllers/chat.js"></script>
+    <script src="/scripts/angularfire/auth.js"></script>
+    <script src="/config/constants.js"></script>
 
-    <script src="components/header/headerComponent.js"></script>
-    <script src="features/create/create.component.js"></script>
-    <script src="features/join/join.component.js"></script>
-    <script src="features/room/room.component.js"></script>
-    <script src="features/game/game.component.js"></script>
+    <script src="/components/header/headerComponent.js"></script>
+    <script src="/features/create/create.component.js"></script>
+    <script src="/features/join/join.component.js"></script>
+    <script src="/features/room/room.component.js"></script>
+    <script src="/features/game/game.component.js"></script>
 
 
-    <script src="scripts/controllers/gameController.js"></script>
-    <script src="scripts/factories/usersFactory.js"></script>
-    <script src="scripts/factories/roomsFactory.js"></script>
+    <script src="/scripts/controllers/gameController.js"></script>
+    <script src="/scripts/factories/usersFactory.js"></script>
+    <script src="/scripts/factories/roomsFactory.js"></script>
     <!-- endbuild -->
   </body>
 </html>
