--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -70,6 +70,8 @@
     <script src="/scripts/controllers/gameController.js"></script>
     <script src="/scripts/factories/usersFactory.js"></script>
     <script src="/scripts/factories/roomsFactory.js"></script>
+
+    <script src="/partialTemplates/templates.js"></script>
     <!-- endbuild -->
   </body>
 </html>
