Code redesign roomsService, create, join, and esLint fixes

--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
     <script src="/scripts/controllers/gameController.js"></script>
     <script src="/scripts/factories/usersFactory.js"></script>
     <script src="/scripts/factories/roomsFactory.js"></script>
+    <script src="/scripts/services/room.service.js"></script>
 
     <script src="/partialTemplates/templates.js"></script>
     <!-- endbuild -->
