--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/humanize-duration/humanize-duration.js"></script>
     <script src="bower_components/angular-timer/dist/angular-timer.js"></script>
+    <script src="bower_components/ngstorage/ngStorage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -74,6 +75,7 @@
     <script src="/scripts/factories/usersFactory.js"></script>
     <script src="/scripts/factories/roomsFactory.js"></script>
     <script src="/scripts/services/room.service.js"></script>
+    <script src="/scripts/services/user.service.js"></script>
 
     <script src="/partialTemplates/templates.js"></script>
     <!-- endbuild -->
