Use unique usernames, resolve all data on state, style change, credits

--- a/app/features/room/words-form.html
+++ b/app/features/room/words-form.html
@@ -24,7 +24,7 @@
         <div class="u-padding-20">
             <button ng-bind="'Submit'"
                     ng-click="submitWords()"
-                    class="c-btn colour-grey bg-colour-white u-border-standard u-box-shadow">
+                    class="c-btn c-btn-whiteGrey u-border-standard u-box-shadow">
             </button>
         </div>
     </div>
