Add settings feature to change num of words

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
     <script src="/features/join/join.component.js"></script>
     <script src="/features/room/room.component.js"></script>
     <script src="/features/game/game.component.js"></script>
+    <script src="/features/settings/settings.component.js"></script>
 
 
     <script src="/scripts/controllers/gameController.js"></script>
